--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -142,9 +142,8 @@ macos_arm64_wheel_task:
     CIBW_BEFORE_TEST: >
       python -m pip install --find-links=wheelhouse/ -r requirements.txt
     CIBW_TEST_COMMAND: bash {project}/tests/run_tests.sh
-    PATH: $HOME/mambaforge/bin/:$PATH
-    CONDA_HOME: $HOME/mambaforge
-  conda_script:
-    - curl -L -o ~/mambaforge.sh https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-MacOSX-arm64.sh
-    - bash ~/mambaforge.sh -b -p ~/mambaforge
+    PATH: /opt/homebrew/opt/python@3.10/bin:$PATH
+  python_script:
+    - brew install python@3.10
+    - ln -s python3 /opt/homebrew/opt/python@3.10/bin/python
   <<: *BUILD_AND_STORE_WHEELS
