--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -127,23 +127,26 @@ build_and_store_wheels: &BUILD_AND_STORE_WHEELS
 
 macos_arm64_wheel_task:
   macos_instance:
-    image: ghcr.io/cirruslabs/macos-ventura-xcode
+    matrix:
+    - image: ghcr.io/cirruslabs/macos-ventura-xcode
+    - image: ghcr.io/cirruslabs/macos-monterey-xcode
   env:
     matrix:
-    - CIBW_BUILD: cp38-macosx_arm64
+    # - CIBW_BUILD: cp38-macosx_arm64
     - CIBW_BUILD: cp39-macosx_arm64
-    - CIBW_BUILD: cp310-macosx_arm64
-    - CIBW_BUILD: cp311-macosx_arm64
+    # - CIBW_BUILD: cp310-macosx_arm64
+    # - CIBW_BUILD: cp311-macosx_arm64
     CIBW_ARCHS_MACOS: "arm64"
     CIBW_BEFORE_ALL_MACOS: |
       python -m pip install --upgrade pip setuptools
       python -m pip install cmake ninja
+      brew install libpng
     CIBW_BUILD_VERBOSITY: 3
     CIBW_BEFORE_TEST: >
       python -m pip install --find-links=wheelhouse/ -r requirements.txt
     CIBW_TEST_COMMAND: bash {project}/tests/run_tests.sh
     PATH: /opt/homebrew/opt/python@3.10/bin:$PATH
   python_script:
-    - brew install python@3.10 libpng
+    - brew install python@3.10
     - ln -s python3 /opt/homebrew/opt/python@3.10/bin/python
   <<: *BUILD_AND_STORE_WHEELS
