--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -138,7 +138,7 @@ macos_arm64_wheel_task:
     # - CIBW_BUILD: cp311-macosx_arm64
     CIBW_ARCHS_MACOS: "arm64"
     CIBW_BEFORE_ALL_MACOS: |
-      python -m pip install --upgrade pip setuptools
+      python -m ensurepip --upgrade
       python -m pip install cmake ninja
       brew install libpng
     CIBW_BUILD_VERBOSITY: 3
