add Rosetta 2 emulated  `x86_64` builds

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -134,7 +134,7 @@ macos_arm64_wheel_task:
     - CIBW_BUILD: cp39-macosx_arm64
     - CIBW_BUILD: cp310-macosx_arm64
     # - CIBW_BUILD: cp311-macosx_arm64
-    CIBW_ARCHS_MACOS: "arm64"
+    CIBW_ARCHS_MACOS: x86_64 arm64
     CIBW_BEFORE_ALL_MACOS: |
       python -m ensurepip --upgrade
       conda install cmake ninja libpng
