--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,5 @@
 # TODO: pin dependency versions
 name: antspy
-channels:
-  - default
-  - conda-forge
 dependencies:
 - pandas
 - pyyaml
@@ -10,7 +7,8 @@ dependencies:
 - scikit-image
 - scikit-learn
 - statsmodels
-- webcolors
 - matplotlib
 - Pillow
+pip:
 - nibabel
+- webcolors
