--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,6 +17,7 @@ linux_aarch64_task:
       - CIBW_BUILD: "cp38-manylinux*"
       - CIBW_BUILD: "cp39-manylinux*"
       - CIBW_BUILD: "cp310-manylinux*"
+      - CIBW_BUILD: "cp311-manylinux*"
     CIBW_ARCHS_LINUX: "auto"
     CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
     CIBW_BEFORE_ALL_LINUX: |
@@ -50,7 +51,7 @@ macos_arm64_wheel_task:
     - CIBW_BUILD: cp38-macosx_arm64
     - CIBW_BUILD: cp39-macosx_arm64
     - CIBW_BUILD: cp310-macosx_arm64
-    # - CIBW_BUILD: cp311-macosx_arm64
+    - CIBW_BUILD: cp311-macosx_arm64
     CIBW_ARCHS_MACOS: arm64
     CIBW_BEFORE_ALL_MACOS: |
       python -m ensurepip --upgrade
