--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -43,9 +43,9 @@ jobs:
           - os: ubuntu-latest
             python: 310
             platform_id: manylinux_x86_64
-          # - os: ubuntu-latest
-          #  python: 311
-          #  platform_id: manylinux_x86_64
+          - os: ubuntu-latest
+            python: 311
+            platform_id: manylinux_x86_64
 
           # macOS on Intel 64-bit
           - os: macos-latest
@@ -88,7 +88,7 @@ jobs:
         with:
           submodules: true
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         name: Install Python host for cibuildwheel
         with:
           python-version: '3.9'
@@ -99,7 +99,7 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.3.1
+        run: python -m pip install cibuildwheel==2.12.0
 
       - name: Build wheels
         env:
