--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -114,8 +114,9 @@ jobs:
           CIBW_ENVIRONMENT_MACOS: |
             CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }}
 
-        run: python -m cibuildwheel --output-dir wheelhouse
+        run: python -m cibuildwheel --output-dir wheelhouse/cp${{ matrix.python }}-${{ matrix.platform_id }}
 
       - uses: actions/upload-artifact@v3
         with:
-          path: ./wheelhouse/*.whl
+          name: cp${{ matrix.python }}-${{ matrix.platform_id }}
+          path: ./wheelhouse/cp${{ matrix.python }}-${{ matrix.platform_id }}/*.whl
