--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -91,6 +91,17 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.12.0
 
+      - name: Get package name and version (Linux / Mac)
+        if: ${{ ! startsWith(matrix.config.name, 'windows-') }}
+        run: |
+          echo PACKAGE_NAME=\"$( python setup.py --name )\" >> $GITHUB_ENV
+          echo PACKAGE_VERSION=\"$( python setup.py --version )\" >> $GITHUB_ENV
+
+      - name: Get package name and version (Windows)
+        if: startsWith(matrix.config.name, 'windows-')
+        run: |
+          echo PACKAGE_NAME=\"$( python setup.py --name )\" >> $GITHUB_ENV | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo PACKAGE_VERSION=\"$( python setup.py --version )\" >> $GITHUB_ENV | Out-File -FilePath $env:GITHUB_ENV -Append
       - name: Build wheels
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
@@ -118,5 +129,5 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: cp${{ matrix.python }}-${{ matrix.platform_id }}
+          name: ${{ env.PACKAGE_NAME }}-${{ env.PACKAGE_VERSION }}-cp${{ matrix.python }}-${{ matrix.platform_id }}
           path: ./wheelhouse/cp${{ matrix.python }}-${{ matrix.platform_id }}/*.whl
