--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -162,7 +162,7 @@ jobs:
       - name: Install and test (Windows)
         if: startsWith(matrix.os, 'windows-')
         run: |
-          python -m pip install --find-links=.\wheelhouse\cp${{ matrix.cibw_python }}-${{matrix.platform_id }}
+          python -m pip install --find-links=.\wheelhouse\cp${{ matrix.cibw_python }}-${{matrix.platform_id }} antspyx
           tests\run_tests.bat
 
       - uses: actions/upload-artifact@v3
