ENH: Windows testing

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,6 +9,7 @@ on:
     - master
   release:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   build_wheels:
@@ -182,7 +183,7 @@ jobs:
         if: startsWith(matrix.os, 'windows-')
         run: |
           python -m pip install --find-links=.\wheelhouse\cp${{ matrix.cibw_python }}-${{matrix.platform_id }} antspyx
-          tests\run_tests.bat
+          tests\run_tests.ps1
 
       - uses: actions/upload-artifact@v3
         with:
