--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -201,3 +201,12 @@ jobs:
           omitNameDuringUpdate: true
           artifacts: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish distribution 📦 to PyPI
+        if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          packages-dir: ./wheelhouse/
+          verify-metadata: false
+          skip-existing: true
+          verbose: true
