WIP: try a new wildcard packages-dir entry for publishing to pypi

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -206,7 +206,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
-          packages-dir: ./wheelhouse/
+          packages-dir: ./wheelhouse/*/*
           verify-metadata: false
           skip-existing: true
           verbose: true
