COMP: yaml syntax issue x2

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -201,11 +201,13 @@ jobs:
           omitNameDuringUpdate: true
           artifacts: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish distribution 📦 to PyPI
+        - name: Publish prep
         if: ${{ github.event_name == 'push' }}
         run: |
             mv wheelhouse/*/*.whl wheelhouse/
             mv wheelhouse/*/*.tar.gz wheelhouse/
+        - name: Publish distribution 📦 to PyPI
+        if: ${{ github.event_name == 'push' }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
