--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -185,6 +185,7 @@ jobs:
           python -m pip install --find-links=.\wheelhouse\cp${{ matrix.cibw_python }}-${{matrix.platform_id }} antspyx
           tests\run_tests.ps1
 
+      - name: heyho
       - uses: actions/upload-artifact@v3
         with:
           name: ${{ env.PACKAGE_NAME }}-${{ env.PACKAGE_VERSION }}-cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}
