COMP: yaml syntax issue x4

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -186,7 +186,7 @@ jobs:
           tests\run_tests.ps1
 
       - name: heyho
-      - uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: ${{ env.PACKAGE_NAME }}-${{ env.PACKAGE_VERSION }}-cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}
           path: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
