--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -208,12 +208,12 @@ jobs:
           mv wheelhouse/*/*.whl wheelhouse/
           mv wheelhouse/*/*.tar.gz wheelhouse/
 
-      - name: Publish distribution 📦 to PyPI
-        if: ${{ github.event_name == 'push' }}
-        uses: pypa/gh-action-pypi-publish@release/v1
-          with:
-            password: ${{ secrets.PYPI_API_TOKEN }}
-            packages-dir: ./wheelhouse/
-            verify-metadata: false
-            skip-existing: true
-            verbose: true          
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          packages_dir: ./wheelhouse/
+          verify_metadata: false
+          skip_existing: true
+          verbose: true          
