--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -205,15 +205,14 @@ jobs:
       - name: Publish prep
         if: ${{ github.event_name == 'push' }}
         run: |
-          mv wheelhouse/*/*.whl wheelhouse/
-          mv wheelhouse/*/*.tar.gz wheelhouse/
+          find / -name "*whl"
 
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          packages_dir: ./wheelhouse/
-          verify_metadata: false
-          skip_existing: true
-          verbose: true          
+#      - name: Publish package
+#        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+#        with:
+#          user: __token__
+#          password: ${{ secrets.PYPI_API_TOKEN }}
+#          packages_dir: ./wheelhouse/
+#          verify_metadata: false
+#          skip_existing: true
+#          verbose: true          
