--- a/.github/workflows/wheels2.yml
+++ b/.github/workflows/wheels2.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-11]
+        os: [ubuntu-22.04]
 
     steps:
       - uses: actions/checkout@v3
