WIP: bah ... gotta rm the dir

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -205,7 +205,9 @@ jobs:
       - name: Publish prep
         if: ${{ github.event_name == 'push' }}
         run: |
+          find /home/runner/work/ANTsPy/ -name "*.whl"
           mv /home/runner/work/ANTsPy/ANTsPy/wheelhouse/cp*/antspyx*.whl /home/runner/work/ANTsPy/ANTsPy/wheelhouse/
+          rm -r -f /home/runner/work/ANTsPy/ANTsPy/wheelhouse/cp*
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
@@ -213,7 +215,8 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-          packages_dir: /home/runner/work/ANTsPy/ANTsPy/wheelhouse/*
+          packages_dir: /home/runner/work/ANTsPy/ANTsPy/wheelhouse/
           verify_metadata: false
           skip_existing: true
-          verbose: true          
+          verbose: true
+
