WIP: try another approach

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,6 +12,23 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  make_sdist:
+    name: Make SDist
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Optional, use if you use setuptools_scm
+        submodules: true  # Optional, use if you have submodules
+
+    - name: Build SDist
+      run: pipx run build --sdist
+
+    - uses: actions/upload-artifact@v3
+      with:
+        path: dist/*.tar.gz
+
   build_wheels:
     name: Build wheel for cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}
     runs-on: ${{ matrix.os }}
@@ -71,27 +88,27 @@ jobs:
             python: '3.7'
             cibw_python: 37
             arch: x86_64
-            platform_id: macosx_x86_64
+            platform_id: universal2
           - os: macos-latest
             python: '3.8'
             cibw_python: 38
             arch: x86_64
-            platform_id: macosx_x86_64
+            platform_id: universal2
           - os: macos-latest
             python: '3.9'
             cibw_python: 39
             arch: x86_64
-            platform_id: macosx_x86_64
+            platform_id: universal2
           - os: macos-latest
             python: '3.10'
             cibw_python: 310
             arch: x86_64
-            platform_id: macosx_x86_64
+            platform_id: universal2
           - os: macos-latest
             python: '3.11'
             cibw_python: 311
             arch: x86_64
-            platform_id: macosx_x86_64
+            platform_id: universal2
 
           # macOS on Apple M1 64-bit
           # - os: macos-latest
@@ -189,7 +206,7 @@ jobs:
         with:
           name: ${{ env.PACKAGE_NAME }}-${{ env.PACKAGE_VERSION }}-cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}
           path: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
-
+    
       - name: Upload release asset
         # Previously was using actions/upload-release-asset@v1 , but this had some
         # errors with large files
@@ -202,23 +219,23 @@ jobs:
           artifacts: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish prep
-        if: ${{ github.event_name == 'push' }}
-        run: |
-          find / -name "antspyx*.whl"
-          mywhl=`find / -name "antspyx*.whl"`
-          mv $mywhl /home/runner/work/ANTsPy/ANTsPy/wheelhouse/
-          DIR="$(dirname "${mywhl}")"
-          rm -r -f $DIR
+  upload_all:
+    needs: [build_wheels, make_sdist]
+    environment: pypi
+    permissions:
+      id-token: write
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+    - uses: actions/download-artifact@v3
+      with:
+        name: artifact
+        path: dist
 
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-        if: ${{ github.event_name == 'push' }}
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          packages_dir: /home/runner/work/ANTsPy/ANTsPy/wheelhouse/
-          verify_metadata: false
-          skip_existing: true
-          verbose: true
-
+    - uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        verify_metadata: false
+        skip_existing: true
+        verbose: true
