WIP: try universal2 for osx

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -83,32 +83,27 @@ jobs:
             cibw_python: 311
             platform_id: manylinux_x86_64
 
-          # macOS on Intel 64-bit
+          # macOS universal
           - os: macos-latest
             python: '3.7'
             cibw_python: 37
-            arch: x86_64
-            platform_id: universal2
+            arch: universal2
           - os: macos-latest
             python: '3.8'
             cibw_python: 38
-            arch: x86_64
-            platform_id: universal2
+            arch: universal2
           - os: macos-latest
             python: '3.9'
             cibw_python: 39
-            arch: x86_64
-            platform_id: universal2
+            arch: universal2
           - os: macos-latest
             python: '3.10'
             cibw_python: 310
-            arch: x86_64
-            platform_id: universal2
+            arch: universal2
           - os: macos-latest
             python: '3.11'
             cibw_python: 311
-            arch: x86_64
-            platform_id: universal2
+            arch: universal2
 
           # macOS on Apple M1 64-bit
           # - os: macos-latest
