WIP: try universal2 for osx x5

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -88,27 +88,27 @@ jobs:
             python: '3.7'
             cibw_python: 37
             arch: x86_64
-            platform_id: universal2
+            platform_id: universal
           - os: macos-latest
             python: '3.8'
             cibw_python: 38
             arch: x86_64
-            platform_id: universal2
+            platform_id: universal
           - os: macos-latest
             python: '3.9'
             cibw_python: 39
             arch: x86_64
-            platform_id: universal2
+            platform_id: universal
           - os: macos-latest
             python: '3.10'
             cibw_python: 310
             arch: x86_64
-            platform_id: universal2
+            platform_id: universal
           - os: macos-latest
             python: '3.11'
             cibw_python: 311
             arch: x86_64
-            platform_id: universal2
+            platform_id: universal
 
           # macOS on Apple M1 64-bit
           # - os: macos-latest
